// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold snapshots > matches the Codex scaffold snapshot 1`] = `
{
  ".codex/README.md": "# Codex Compatibility Layer

This repository already has working project systems for backlog tracking, planning, and knowledge capture.
Codex should use them directly through this runtime layer.

## Canonical Systems

- .rules/ is the source of truth for architecture and workflow patterns
- \`.rules/patterns/omo-agent-contract.md\` is the normative OMO lane and tool contract
- .planning/ is the GSD execution and handoff workspace
- .codex/scripts/ contains the live Cognee and planning sync plumbing
- Use native \`bd\` as the Beads task-tracking interface after \`bd init\`

## Codex Mapping

| Existing project surface | Codex entrypoint |
| --- | --- |
| Runtime scripts | .codex/scripts/*.sh |
| Agent role briefs | .codex/agents/*.md |
| Repo setup skill | .codex/skills/harness/SKILL.md |
| Cognee advisor | ./.codex/scripts/cognee-brief.sh |
| Planning sync | ./.codex/scripts/sync-planning-to-cognee.sh |
| Landing protocol | ./.codex/scripts/land.sh |

## Runtime Surface

- \`./.codex/scripts/cognee-bridge.sh\` - low-level Cognee query, upload, and cognify entrypoint
- \`./.codex/scripts/cognee-sync-planning.sh\` - sync GSD planning artifacts into Cognee
- \`./.codex/scripts/sync-planning-to-cognee.sh\` - user-facing planning sync entrypoint
- \`./.codex/scripts/bootstrap-worktree.sh\` - seed local worktree state and link shared \`.env\` / \`.kamal\` secrets when present
- \`./.opencode/worktree.jsonc\` - optional OpenCode worktree plugin config that reuses \`bootstrap-worktree.sh\` after worktree creation
- \`.codex/workflows/autonomous-execution.md\` - backlog-driven autonomous execution policy shared across Codex and OpenCode
- \`.codex/docker/Dockerfile.cognee\` - container build source for the Cognee deploy template
- \`.codex/skills/harness/SKILL.md\` - reusable setup workflow for new and existing repositories

## Default Workflow

1. Read relevant .rules/ and current .planning/ context.
2. Review .planning/STATE.md before starting implementation.
3. Follow \`.rules/patterns/operator-workflow.md\` as the canonical operator runbook.
4. If Beads is available, start from \`bd ready --json\`, claim the active issue, and continue with \`/gsd-next\`.
5. For existing repos, optionally run \`ai-harness --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\` before tailoring new scaffold files.
6. For planning, research, or autonomous startup work, generate a knowledge brief with ./.codex/scripts/cognee-brief.sh.
7. If you use OpenCode worktrees, install \`kdco/worktree\` with \`ocx add kdco/worktree --from https://registry.kdco.dev\`; the scaffolded \`.opencode/worktree.jsonc\` runs \`./.codex/scripts/bootstrap-worktree.sh --quiet\` after each worktree is created.
8. On a fresh checkout or a manual git worktree, run ./.codex/scripts/bootstrap-worktree.sh.
9. Use \`.codex/workflows/autonomous-execution.md\` for one-agent backlog-driven execution, or \`.codex/workflows/parallel-execution.md\` for multi-wave execution.
10. Run \`pnpm typecheck\`, \`pnpm test\`, \`pnpm test:bdd\`, and \`pnpm test:smoke:dist\` before landing scaffold or runtime changes.
11. Validate each wave before handing off or merging into the next.
12. Close or update Beads issues only after verification passes; create bug issues for verification gaps when needed.
13. If you are in an execution/autonomous landing lane, finish with ./.codex/scripts/land.sh to publish the feature branch and ensure a PR to \`dev\` exists.

## Rules

- Do not create parallel planning systems under .codex/.
- Treat .codex/ as the runtime surface for assistant-specific scripts and docs while keeping \`.planning/\` and \`.rules/\` canonical.
- Keep OMO policy references pointed to \`.rules/patterns/omo-agent-contract.md\` instead of restating doctrine in adapter docs.
- Follow \`.rules/patterns/omo-agent-contract.md\` for Cognee-required lanes and deterministic fallback or blocked outcomes.
",
  ".gitignore": ".env
.env.local
.env.*.local
node_modules/
dist/
coverage/
.turbo/
__pycache__/
*.pyc
.pytest_cache/
.coverage
.venv/
*.log
.vscode/
.idea/
.DS_Store
/STICKYNOTE.md
.beads/.sync.lock
.beads/dolt-server.port
.beads/sync_base.jsonl
.beads/*.db
.beads/backup/
.beads/export/
.beads/README.md
.beads/interactions.jsonl
.kamal/secrets
.kamal/secrets.*
.kamal/secrets-common
!.kamal/secrets.example
cognee_data/
",
  "AGENTS.md": "# AGENTS.md

> AI Development Guide

## Overview

This repository is prepared for Codex through a focused runtime layer while keeping .rules/ and .planning/ as the canonical project systems.

## Codex Workflow

Codex works in this repository through a focused runtime layer. The canonical systems remain:

- .rules/ for architecture and workflow rules
- .planning/ for GSD planning, execution, and handoff artifacts
- .codex/scripts/ for working Cognee and planning sync backends

Use the Codex compatibility docs and scripts under .codex/ as entrypoints, not as a separate source of truth.
For OMO lane and tool policy, treat \`.rules/patterns/omo-agent-contract.md\` as the normative source and keep this file adapter-only.

### Codex Operating Sequence

1. Read the relevant .rules/ documents before changing code or infrastructure.
2. Inspect .planning/STATE.md and any active phase docs in .planning/.
3. Use native \`bd\` for task tracking after the repository is initialized with \`bd init\`.
4. For planning, research, or autonomous startup work, query Cognee with ./.codex/scripts/cognee-brief.sh "<query>".
5. If you use OpenCode worktrees, prefer the scaffolded \`.opencode/worktree.jsonc\` with \`kdco/worktree\`; otherwise run ./.codex/scripts/bootstrap-worktree.sh on a fresh worktree.
6. Use \`.rules/patterns/operator-workflow.md\` and \`/gsd-next\` as the default interactive work loop.
7. If you are in an execution/autonomous landing lane, land the session with ./.codex/scripts/land.sh.

### Codex Guardrails

- Do not create duplicate planning systems or issue trackers under .codex/.
- Do not mirror .planning/ into .codex-specific directories.
- Do not redefine OMO doctrine here; reference \`.rules/patterns/omo-agent-contract.md\` when policy decisions are needed.
- Follow \`.rules/patterns/omo-agent-contract.md\` for Cognee-required lanes and deterministic fallback or blocked outcomes.
- Treat .codex/agents/*.md as reusable role briefs and .codex/scripts/*.sh as the executable surface.
- Use \`.codex/skills/harness/SKILL.md\` when bootstrapping or adopting another repository with ai-harness.
- When the user asks for \`task table\`, format the response as a Markdown table with columns \`ID | Priority | Status | Title\`.

### Landing Authority

- Only execution/autonomous landing lanes should run \`./.codex/scripts/land.sh\`.
- Planning, research, and review lanes must hand off instead of publishing.

### Beads + GSD Loop

- When Beads is available, use \`bd ready --json\` and \`bd update <id> --claim --json\` before phase work.
- Use \`.codex/workflows/autonomous-execution.md\` for one-agent phase execution, or \`.codex/workflows/parallel-execution.md\` for multi-wave work.
- Carry the active Beads issue ID through phase notes, execution context, and handoff docs.
- Use \`/gsd-next\` first, then \`/gsd-discuss-phase <n>\`, \`/gsd-plan-phase <n>\`, \`/gsd-execute-phase <n>\`, and \`/gsd-verify-work <n>\` when phase work is required.
- Close Beads issues only after verification passes.
- If verification finds gaps, create follow-up Beads bug issues instead of closing the parent work early.
- If \`.beads/\` or \`bd\` is unavailable, continue the GSD workflow without blocking on issue tracking.
",
  "README.md": "# Snapshot Codex

This project is scaffolded for the local AI workflow used across Codex, GSD, Beads, and Cognee.

## What was added

- Planning artifacts in .planning/
- Codex/OpenCode runtime files in .codex/
- Repo setup skill in .codex/skills/harness/
- Beads workflow guidance using native \`bd\`
- Deployment templates in config/ and .kamal/
- Codex runtime files in .codex/ and AGENTS.md

## Harness baseline

- Scaffolded with \`ai-harness\` v0.1.0 on 2026-03-30
- Record the \`ai-harness\` version and source commit in the PR or handoff note each time you refresh this scaffold
- Supported update flow today is checkout-based: pull the \`ai-harness\` checkout forward, rebuild \`dist/\`, rerun \`ai-harness --mode existing <path> --assistant <codex|opencode> --init-json\`, then customize only \`createdPaths\`
- This scaffold assumes \`ai-harness\` is used locally to set up and refresh repos, not consumed as a registry-published package
- Finish updates with \`ai-harness doctor <path> --assistant <codex|opencode>\`

## If you are migrating from scaiff

- \`ai-harness\` is the renamed successor to \`scaiff\`
- use \`ai-harness\` for installs and updates; there is no separate \`scaiff\` binary or package alias
- the old global OpenCode skill name \`scaiff-repo-setup\` is replaced by \`harness\`
- use \`--cleanup-manifest legacy-ai-frameworks-v1\` only when you intentionally want curated legacy workflow leftovers removed

## Next steps

1. Update .planning/PROJECT.md with the real product definition.
2. Review .rules/patterns/operator-workflow.md, AGENTS.md, and .codex/README.md.
3. Copy .env.example to .env and fill in local values.
4. If you use OpenCode worktrees, install \`kdco/worktree\` with \`ocx add kdco/worktree --from https://registry.kdco.dev\`; this scaffold includes \`.opencode/worktree.jsonc\` and reuses \`./.codex/scripts/bootstrap-worktree.sh\` as the post-create hook.
5. If \`pre-commit\` is installed locally, ai-harness already wires the worktree bootstrap hook; otherwise keep \`scripts/hooks/post-checkout\` available for later hook installation.
6. Run \`bd init\` once in the repository before using Beads.
7. Use \`bd ready --json\`, \`bd update <id> --claim --json\`, and \`/gsd-next\` as the default work loop.
8. Create a feature branch before your first commit.
9. If you use OpenCode, rerun \`ai-harness install-skill --assistant opencode\` after harness updates to refresh the managed \`harness\` skill, \`~/.config/opencode/oh-my-opencode.json\`, \`~/.config/opencode/get-shit-done/workflows/autonomous.md\`, and \`~/.gsd/defaults.json\`.
10. Use \`.codex/skills/harness/SKILL.md\` when adopting or bootstrapping another repository.
11. If you are adopting a repo with legacy AI framework files, use \`ai-harness --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\`.
12. Let an execution/autonomous landing lane run \`./.codex/scripts/land.sh\` from your feature branch once verification passes; it publishes the branch and ensures a PR to \`dev\` exists.
",
  "STICKYNOTE.example.md": "# Session Handoff

**Project:** Snapshot Codex

This file is the default handoff note for the scaffolded repository.

## Completed This Session

- Current branch:
- Current task:
- Verified with:

## Key Files Changed

-

## Pending / Follow-Up

- Record unresolved work and next actions before handoff.
- Note any validation still required before landing work.
",
  "files": [
    ".beads/config.yaml",
    ".beads/hooks/post-checkout",
    ".codex/README.md",
    ".codex/agents/gsd-cognee-advisor.md",
    ".codex/agents/implementer.md",
    ".codex/agents/orchestrator.md",
    ".codex/agents/reviewer.md",
    ".codex/docker/Dockerfile.cognee",
    ".codex/scripts/bootstrap-worktree.sh",
    ".codex/scripts/cognee-bridge.sh",
    ".codex/scripts/cognee-brief.sh",
    ".codex/scripts/cognee-sync-planning.sh",
    ".codex/scripts/land.sh",
    ".codex/scripts/sync-planning-to-cognee.sh",
    ".codex/skills/harness/SKILL.md",
    ".codex/skills/harness/assets/adoption-notes-template.md",
    ".codex/skills/harness/references/ai-harness-command-matrix.md",
    ".codex/skills/harness/references/existing-repo-context-checklist.md",
    ".codex/skills/harness/references/manifest-discovery.md",
    ".codex/skills/harness/references/scaffold-customization-map.md",
    ".codex/templates/phase-execution.md",
    ".codex/workflows/autonomous-execution.md",
    ".codex/workflows/parallel-execution.md",
    ".env.example",
    ".envrc",
    ".gitignore",
    ".gitleaks.toml",
    ".kamal/secrets.example",
    ".opencode/worktree.jsonc",
    ".planning/PROJECT.md",
    ".planning/REQUIREMENTS.md",
    ".planning/ROADMAP.md",
    ".planning/STATE.md",
    ".planning/codebase/README.md",
    ".planning/config.json",
    ".planning/milestones/README.md",
    ".planning/phases/README.md",
    ".planning/quick/README.md",
    ".planning/research/README.md",
    ".pre-commit-config.yaml",
    ".rules/index.md",
    ".rules/patterns/bdd-workflow.md",
    ".rules/patterns/beads-integration.md",
    ".rules/patterns/cognee-gsd-integration.md",
    ".rules/patterns/deployment.md",
    ".rules/patterns/env-security.md",
    ".rules/patterns/git-workflow.md",
    ".rules/patterns/gsd-workflow.md",
    ".rules/patterns/omo-agent-contract.md",
    ".rules/patterns/operator-workflow.md",
    "AGENTS.md",
    "README.md",
    "STICKYNOTE.example.md",
    "config/deploy.cognee.yml",
    "config/deploy.yml",
    "scripts/hooks/post-checkout",
  ],
}
`;

exports[`scaffold snapshots > matches the OpenCode scaffold snapshot 1`] = `
{
  ".codex/README.md": "# OpenCode Compatibility Layer

This repository already has working project systems for backlog tracking, planning, and knowledge capture.
OpenCode should use them directly through this runtime layer.

## Canonical Systems

- .rules/ is the source of truth for architecture and workflow patterns
- \`.rules/patterns/omo-agent-contract.md\` is the normative OMO lane and tool contract
- .planning/ is the GSD execution and handoff workspace
- .codex/scripts/ contains the live Cognee and planning sync plumbing
- Use native \`bd\` as the Beads task-tracking interface after \`bd init\`

## OpenCode Mapping

| Existing project surface | OpenCode entrypoint |
| --- | --- |
| Runtime scripts | .codex/scripts/*.sh |
| Agent role briefs | .codex/agents/*.md |
| Repo setup skill | .codex/skills/harness/SKILL.md |
| Cognee advisor | ./.codex/scripts/cognee-brief.sh |
| Planning sync | ./.codex/scripts/sync-planning-to-cognee.sh |
| Landing protocol | ./.codex/scripts/land.sh |

## Runtime Surface

- \`./.codex/scripts/cognee-bridge.sh\` - low-level Cognee query, upload, and cognify entrypoint
- \`./.codex/scripts/cognee-sync-planning.sh\` - sync GSD planning artifacts into Cognee
- \`./.codex/scripts/sync-planning-to-cognee.sh\` - user-facing planning sync entrypoint
- \`./.codex/scripts/bootstrap-worktree.sh\` - seed local worktree state and link shared \`.env\` / \`.kamal\` secrets when present
- \`./.opencode/worktree.jsonc\` - optional OpenCode worktree plugin config that reuses \`bootstrap-worktree.sh\` after worktree creation
- \`.codex/workflows/autonomous-execution.md\` - backlog-driven autonomous execution policy shared across Codex and OpenCode
- \`.codex/docker/Dockerfile.cognee\` - container build source for the Cognee deploy template
- \`.codex/skills/harness/SKILL.md\` - reusable setup workflow for new and existing repositories

## Default Workflow

1. Read relevant .rules/ and current .planning/ context.
2. Review .planning/STATE.md before starting implementation.
3. Follow \`.rules/patterns/operator-workflow.md\` as the canonical operator runbook.
4. If Beads is available, start from \`bd ready --json\`, claim the active issue, and continue with \`/gsd-next\`.
5. For existing repos, optionally run \`ai-harness --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\` before tailoring new scaffold files.
6. For planning, research, or autonomous startup work, generate a knowledge brief with ./.codex/scripts/cognee-brief.sh.
7. If you use OpenCode worktrees, install \`kdco/worktree\` with \`ocx add kdco/worktree --from https://registry.kdco.dev\`; the scaffolded \`.opencode/worktree.jsonc\` runs \`./.codex/scripts/bootstrap-worktree.sh --quiet\` after each worktree is created.
8. On a fresh checkout or a manual git worktree, run ./.codex/scripts/bootstrap-worktree.sh.
9. Use \`.codex/workflows/autonomous-execution.md\` for one-agent backlog-driven execution, or \`.codex/workflows/parallel-execution.md\` for multi-wave execution.
10. Run \`pnpm typecheck\`, \`pnpm test\`, \`pnpm test:bdd\`, and \`pnpm test:smoke:dist\` before landing scaffold or runtime changes.
11. Validate each wave before handing off or merging into the next.
12. Close or update Beads issues only after verification passes; create bug issues for verification gaps when needed.
13. If you are in an execution/autonomous landing lane, finish with ./.codex/scripts/land.sh to publish the feature branch and ensure a PR to \`dev\` exists.

## Rules

- Do not create parallel planning systems under .codex/.
- Treat .codex/ as the runtime surface for assistant-specific scripts and docs while keeping \`.planning/\` and \`.rules/\` canonical.
- Keep OMO policy references pointed to \`.rules/patterns/omo-agent-contract.md\` instead of restating doctrine in adapter docs.
- Follow \`.rules/patterns/omo-agent-contract.md\` for Cognee-required lanes and deterministic fallback or blocked outcomes.
",
  ".gitignore": ".env
.env.local
.env.*.local
node_modules/
dist/
coverage/
.turbo/
__pycache__/
*.pyc
.pytest_cache/
.coverage
.venv/
*.log
.vscode/
.idea/
.DS_Store
/STICKYNOTE.md
.beads/.sync.lock
.beads/dolt-server.port
.beads/sync_base.jsonl
.beads/*.db
.beads/backup/
.beads/export/
.beads/README.md
.beads/interactions.jsonl
.kamal/secrets
.kamal/secrets.*
.kamal/secrets-common
!.kamal/secrets.example
cognee_data/
",
  "AGENTS.md": "# AGENTS.md

> AI Development Guide

## Overview

This repository is prepared for OpenCode through a focused runtime layer while keeping .rules/ and .planning/ as the canonical project systems.

## OpenCode Workflow

OpenCode works in this repository through a focused runtime layer. The canonical systems remain:

- .rules/ for architecture and workflow rules
- .planning/ for GSD planning, execution, and handoff artifacts
- .codex/scripts/ for working Cognee and planning sync backends

Use the OpenCode compatibility docs and scripts under .codex/ as entrypoints, not as a separate source of truth.
For OMO lane and tool policy, treat \`.rules/patterns/omo-agent-contract.md\` as the normative source and keep this file adapter-only.

### OpenCode Operating Sequence

1. Read the relevant .rules/ documents before changing code or infrastructure.
2. Inspect .planning/STATE.md and any active phase docs in .planning/.
3. Use native \`bd\` for task tracking after the repository is initialized with \`bd init\`.
4. For planning, research, or autonomous startup work, query Cognee with ./.codex/scripts/cognee-brief.sh "<query>".
5. If you use OpenCode worktrees, prefer the scaffolded \`.opencode/worktree.jsonc\` with \`kdco/worktree\`; otherwise run ./.codex/scripts/bootstrap-worktree.sh on a fresh worktree.
6. Use \`.rules/patterns/operator-workflow.md\` and \`/gsd-next\` as the default interactive work loop.
7. If you are in an execution/autonomous landing lane, land the session with ./.codex/scripts/land.sh.

### OpenCode Guardrails

- Do not create duplicate planning systems or issue trackers under .codex/.
- Do not mirror .planning/ into .codex-specific directories.
- Do not redefine OMO doctrine here; reference \`.rules/patterns/omo-agent-contract.md\` when policy decisions are needed.
- Follow \`.rules/patterns/omo-agent-contract.md\` for Cognee-required lanes and deterministic fallback or blocked outcomes.
- Treat .codex/agents/*.md as reusable role briefs and .codex/scripts/*.sh as the executable surface.
- Use \`.codex/skills/harness/SKILL.md\` when bootstrapping or adopting another repository with ai-harness.
- When the user asks for \`task table\`, format the response as a Markdown table with columns \`ID | Priority | Status | Title\`.

### Landing Authority

- Only execution/autonomous landing lanes should run \`./.codex/scripts/land.sh\`.
- Planning, research, and review lanes must hand off instead of publishing.

### Beads + GSD Loop

- When Beads is available, use \`bd ready --json\` and \`bd update <id> --claim --json\` before phase work.
- Use \`.codex/workflows/autonomous-execution.md\` for one-agent phase execution, or \`.codex/workflows/parallel-execution.md\` for multi-wave work.
- Carry the active Beads issue ID through phase notes, execution context, and handoff docs.
- Use \`/gsd-next\` first, then \`/gsd-discuss-phase <n>\`, \`/gsd-plan-phase <n>\`, \`/gsd-execute-phase <n>\`, and \`/gsd-verify-work <n>\` when phase work is required.
- Close Beads issues only after verification passes.
- If verification finds gaps, create follow-up Beads bug issues instead of closing the parent work early.
- If \`.beads/\` or \`bd\` is unavailable, continue the GSD workflow without blocking on issue tracking.
",
  "README.md": "# Snapshot Opencode

This project is scaffolded for the local AI workflow used across OpenCode, GSD, Beads, and Cognee.

## What was added

- Planning artifacts in .planning/
- Codex/OpenCode runtime files in .codex/
- Repo setup skill in .codex/skills/harness/
- Beads workflow guidance using native \`bd\`
- Deployment templates in config/ and .kamal/
- OpenCode runtime files in .codex/ and AGENTS.md

## Harness baseline

- Scaffolded with \`ai-harness\` v0.1.0 on 2026-03-30
- Record the \`ai-harness\` version and source commit in the PR or handoff note each time you refresh this scaffold
- Supported update flow today is checkout-based: pull the \`ai-harness\` checkout forward, rebuild \`dist/\`, rerun \`ai-harness --mode existing <path> --assistant <codex|opencode> --init-json\`, then customize only \`createdPaths\`
- This scaffold assumes \`ai-harness\` is used locally to set up and refresh repos, not consumed as a registry-published package
- Finish updates with \`ai-harness doctor <path> --assistant <codex|opencode>\`

## If you are migrating from scaiff

- \`ai-harness\` is the renamed successor to \`scaiff\`
- use \`ai-harness\` for installs and updates; there is no separate \`scaiff\` binary or package alias
- the old global OpenCode skill name \`scaiff-repo-setup\` is replaced by \`harness\`
- use \`--cleanup-manifest legacy-ai-frameworks-v1\` only when you intentionally want curated legacy workflow leftovers removed

## Next steps

1. Update .planning/PROJECT.md with the real product definition.
2. Review .rules/patterns/operator-workflow.md, AGENTS.md, and .codex/README.md.
3. Copy .env.example to .env and fill in local values.
4. If you use OpenCode worktrees, install \`kdco/worktree\` with \`ocx add kdco/worktree --from https://registry.kdco.dev\`; this scaffold includes \`.opencode/worktree.jsonc\` and reuses \`./.codex/scripts/bootstrap-worktree.sh\` as the post-create hook.
5. If \`pre-commit\` is installed locally, ai-harness already wires the worktree bootstrap hook; otherwise keep \`scripts/hooks/post-checkout\` available for later hook installation.
6. Run \`bd init\` once in the repository before using Beads.
7. Use \`bd ready --json\`, \`bd update <id> --claim --json\`, and \`/gsd-next\` as the default work loop.
8. Create a feature branch before your first commit.
9. If you use OpenCode, rerun \`ai-harness install-skill --assistant opencode\` after harness updates to refresh the managed \`harness\` skill, \`~/.config/opencode/oh-my-opencode.json\`, \`~/.config/opencode/get-shit-done/workflows/autonomous.md\`, and \`~/.gsd/defaults.json\`.
10. Use \`.codex/skills/harness/SKILL.md\` when adopting or bootstrapping another repository.
11. If you are adopting a repo with legacy AI framework files, use \`ai-harness --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\`.
12. Let an execution/autonomous landing lane run \`./.codex/scripts/land.sh\` from your feature branch once verification passes; it publishes the branch and ensures a PR to \`dev\` exists.
",
  "STICKYNOTE.example.md": "# Session Handoff

**Project:** Snapshot Opencode

This file is the default handoff note for the scaffolded repository.

## Completed This Session

- Current branch:
- Current task:
- Verified with:

## Key Files Changed

-

## Pending / Follow-Up

- Record unresolved work and next actions before handoff.
- Note any validation still required before landing work.
",
  "files": [
    ".beads/config.yaml",
    ".beads/hooks/post-checkout",
    ".codex/README.md",
    ".codex/agents/gsd-cognee-advisor.md",
    ".codex/agents/implementer.md",
    ".codex/agents/orchestrator.md",
    ".codex/agents/reviewer.md",
    ".codex/docker/Dockerfile.cognee",
    ".codex/scripts/bootstrap-worktree.sh",
    ".codex/scripts/cognee-bridge.sh",
    ".codex/scripts/cognee-brief.sh",
    ".codex/scripts/cognee-sync-planning.sh",
    ".codex/scripts/land.sh",
    ".codex/scripts/sync-planning-to-cognee.sh",
    ".codex/skills/harness/SKILL.md",
    ".codex/skills/harness/assets/adoption-notes-template.md",
    ".codex/skills/harness/references/ai-harness-command-matrix.md",
    ".codex/skills/harness/references/existing-repo-context-checklist.md",
    ".codex/skills/harness/references/manifest-discovery.md",
    ".codex/skills/harness/references/scaffold-customization-map.md",
    ".codex/templates/phase-execution.md",
    ".codex/workflows/autonomous-execution.md",
    ".codex/workflows/parallel-execution.md",
    ".env.example",
    ".envrc",
    ".gitignore",
    ".gitleaks.toml",
    ".kamal/secrets.example",
    ".opencode/worktree.jsonc",
    ".planning/PROJECT.md",
    ".planning/REQUIREMENTS.md",
    ".planning/ROADMAP.md",
    ".planning/STATE.md",
    ".planning/codebase/README.md",
    ".planning/config.json",
    ".planning/milestones/README.md",
    ".planning/phases/README.md",
    ".planning/quick/README.md",
    ".planning/research/README.md",
    ".pre-commit-config.yaml",
    ".rules/index.md",
    ".rules/patterns/bdd-workflow.md",
    ".rules/patterns/beads-integration.md",
    ".rules/patterns/cognee-gsd-integration.md",
    ".rules/patterns/deployment.md",
    ".rules/patterns/env-security.md",
    ".rules/patterns/git-workflow.md",
    ".rules/patterns/gsd-workflow.md",
    ".rules/patterns/omo-agent-contract.md",
    ".rules/patterns/operator-workflow.md",
    "AGENTS.md",
    "README.md",
    "STICKYNOTE.example.md",
    "config/deploy.cognee.yml",
    "config/deploy.yml",
    "scripts/hooks/post-checkout",
  ],
}
`;
